got to start cnbc tomorrow

--- a/cnbc.html
+++ b/cnbc.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+<!DOCTYPE html>
+<html>
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144593656-1"></script>
@@ -19,6 +21,8 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <!-- Google font -->
   <link href='https://fonts.googleapis.com/css?family=Thonburi' rel='stylesheet'>
+<link href="https://fonts.googleapis.com/css?family=Chivo&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
   <!-- Fonts/Icons -->
   <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
   <link href="css/style.css" rel="stylesheet" />
@@ -52,58 +56,54 @@
 </nav>
 
 <div id="padding"></div>
-
+<div class="row">
   <img src="images/cnbc1.png" class="img-responsive">
-
+</div>
 
 <div class="padding">
   <div class="container">
     <div class="row">
       <h2>Overview</h2>
     </div>
-        <div class="col">
-          <h3 class="text-center">Context</h3>
-        </div>
-        <div class="col">
-          <p>Our client organization is CNBC and we were tasked with evaluating their year-long redesign of their CNBC iOS app version 5.0.3. The CNBC iOS app has a wide variety of features but after the initial meeting with our client, we narrowed our scope to only evaluating the <mark>extensive live TV</mark> and <mark>stock-charts</mark> features as our primary goals and explore <mark>gestures</mark> and consider general <mark>usability issues</mark> as our secondary goals. </p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-        <div class="padding">
-          <div class="container">
     <div class="row">
       <div class="col-sm-4">
         <h4>Team</h4>
-        <hr>
-        <p>👋Michelle Kim, UX Researcher<br>
-          Elissa Irhamy, Data Scientist<br>
-          Yin Yin, UX & Front End Engineer<br>
-          Surita Spigner, UX Researcher</p>
+          <p>Michelle Kim, UX Researcher<br>
+            Elissa Irhamy, Data Scientist<br>
+            Yin Yin, UX & Front End Engineer<br>
+            Surita Spigner, UX Researcher</p>
       </div>
       <div class="col-sm-4">
         <h4>Client</h4>
-        <hr>
-        <p>CNBC New York</p>
+          <p>CNBC in New York</p>
       </div>
       <div class="col-sm-4">
         <h4>Duration</h4>
-        <hr>
-        <p>Jan 2019 - April 2019, 3 months </p>
+          <p>Jan 2019 - April 2019, 3 months </p>
       </div>
     </div>
   </div>
-  </div>
+</div>
+
+      <div class="padding">
+        <div class="container">
+          <div class="col">
+                <h3>Context</h3>
+          </div>
+            <div class="col">
+              <p>Our client organization is CNBC and we were tasked with evaluating their year-long redesign of their CNBC iOS app version 5.0.3. The CNBC iOS app has a wide variety of features but after the initial meeting with our client, we narrowed our scope to only evaluating the <mark>extensive live TV</mark> and <mark>stock-charts</mark> features as our primary goals and explore <mark>gestures</mark> and consider general <mark>usability issues</mark> as our secondary goals. </p>
+            </div>
+          </div>
+        </div>
 
   <div class="padding">
     <div class="container">
       <div class="col">
-        <h3 class="text-center">Process</h3>
+        <h3>Process</h3>
       </div>
       <div class="row">
         <div class="col-sm-3">
-
+<h4>Understand</h4>
           <li>Interaction Map</li>
           <li>Personas</li>
           <li>Scenarios</li>
@@ -131,25 +131,22 @@
   <div class="padding">
     <div class="container">
       <div class="col">
-        <h3 class="text-center">Recommendations at Glance</h3>
+        <h3>Recommendations at Glance</h3>
       </div>
       <div class="row">
       <div class="col-sm-4">
-        <h5>01</h5>
-        <hr>
+        <h4>01</h4>
         <p>Information displayed in stock-charts are important, but the ability to filter out data should not be neglected. Allow manipulation of stock charts(e.g. ability to extend lines through certain points on the graph).</p>
         <img src="images/cnbcrec1.png" class="img-responsive">
 
       </div>
       <div class="col-sm-4">
-        <h5>02</h5>
-        <hr>
+        <h4>02</h4>
         <p>Consider Youtube as competitor and adopt its gestures. Incorporate double tapping to forward/reverse, and allow users to minimize their video/play in the background while they decide what content they want to watch next.</p>
           <img src="images/cnbcrec2.png" class="img-responsive">
       </div>
       <div class="col-sm-4">
-        <h5>03</h5>
-        <hr>
+        <h4>03</h4>
         <p>CNBC should offer free trials to entice users to download the app and thenoffer more exclusive content so that users feel a need to install the CNBC app as opposed to other applications for finance related content.</p>
         <img src="images/cnbcrec3.png" class="img-responsive">
 
@@ -165,27 +162,22 @@
       <div class="row">
         <h2>Understand</h2>
       </div>
-        <div class="container">
-          <div class="row">
-            <h3 class="text-center">Interaction Map</h3>
+          <div class="col">
+            <h3>Interaction Map</h3>
           </div>
           <div class="col"
             <p>To better understand our product, we created an interaction map. It allowed us to understand the product from a users' perspective.</p>
           </div>
-      </div>
-          <div class="row">
             <div class="col">
                 <img src="images/interactionmap.png" class="img-responsive">
             </div>
           </div>
-
       </div>
       <div class="padding">
         <div class="container">
           <div class="col">
-            <h3 class="text-center">Interviews</h3>
+            <h3>Interviews</h3>
           </div>
-          <div class="row">
             <div class="col">
             <p> Our most important findings from interviews were:
               <li>People who preferred watching live TV on mobile applications rather than on TV did so because of less ads and felt content on mobile apps updated faster.</li>
@@ -199,9 +191,8 @@
       <div class="padding">
         <div class="container">
           <div class="col">
-            <h3 class="text-center">Personas</h3>
+            <h3 >Personas</h3>
           </div>
-          <div class="row">
             <div class="col">
               <p>We then wanted to understand the people using the CNBC mobile app. To create effective user personas, we decided to interview five students from the Ross School of Business, University of Michigan’s business school. Through the interviews, we collected enough qualitative data to flesh out two types of users. </p>
             </div>
@@ -218,27 +209,23 @@
               <h2>Explore</h2>
             </div>
             <div class="col">
-              <h3 class="text-center">Competitive Analysis</h3>
+              <h3>Competitive Analysis</h3>
             </div>
             <div class="row">
               <div class="col-sm-3">
-                <h5>01 Direct</h5>
-                <hr>
+                <h4>01 Direct</h4>
                 <p>Bloomberg was a direct competitor because it contained all the main features (markets, news, and video/TV)</p>
               </div>
               <div class="col-sm-3">
-                <h5>02 Indirect</h5>
-                <hr>
+                <h4>02 Indirect</h4>
                 <p>WSJ was an indirect competitor because it provided financial news through some other medium than video</p>
               </div>
               <div class="col-sm-3">
-                <h5>03 Partial</h5>
-                <hr>
+                <h4>03 Partial</h4>
                 <p>Marketwatch, IGTV, Youtube Live, Yahoo Finance were all partial competitors because they had only a few overlapping content and features</p>
               </div>
               <div class="col-sm-3">
-                <h5>04 Parallel</h5>
-                <hr>
+                <h4>04 Parallel</h4>
                 <p>Robinhood was a parallel competitor because the user base included finance/business interested people</p>
               </div>
             </div>
@@ -248,7 +235,7 @@
           <div class="padding">
             <div class="container">
               <div class="col">
-                <h3 class="text-center">Surveys</h3>
+                <h3>Surveys</h3>
               </div>
               <div class="col">
                 <p>We then wanted to learn about people’s habits and preferences. We were able to collect 43 survey responses from potential users who were students and professors from the Ross School of Business. With the surveys, we were able to learn that people prefer on-demand content much more than live content, half of the survey responses who watch cable TV reported they watch it on their mobile phones, and how people decide to sign up for membership largely depended on the uniqueness of the content more than other factors.</p>
@@ -263,7 +250,7 @@
                 <h2>Identify</h2>
               </div>
                 <div class="col">
-                  <h3 class="text-center">Heuristics Evaluation</h3>
+                  <h3>Heuristics Evaluation</h3>
                 </div>
                 <div class="row">
                 <div class="col-sm-6">
@@ -285,7 +272,7 @@
             <div class="padding">
               <div class="container">
                   <div class="col">
-                    <h3 class="text-center">Usability Testing</h3>
+                    <h3>Usability Testing</h3>
                   </div>
                   <div class="col">
                       <p>A usability testing was done with five participants to be able to provide concrete quantitative and qualitative data to strengthen our argument for our recommendations. The most crucial urgent recommendations were including subtitles for videos, incorporating gestures into videos that are already prevalent in video platforms like Netflix and Youtube such as double tapping to forward and reverse, and relevant link articles near videos for users who want to learn more beyond watching few minute clips. </p>
@@ -299,7 +286,7 @@
                   <h2>Materialize</h2>
                 </div>
                 <div class="col">
-                  <h3 class="text-center">Preference Testing</h3>
+                  <h3>Preference Testing</h3>
                 </div>
                 <div class="col">
 
@@ -315,7 +302,7 @@
             <div class="padding">
               <div class="container">
                 <div class="col">
-                  <h3 class="text-center">Recommendations</h3>
+                  <h3>Recommendations</h3>
                 </div>
                 <div class="row">
                 <div class="col-sm-4">
