--- a/lexmark.html
+++ b/lexmark.html
@@ -56,8 +56,9 @@
 <div id="padding"></div>
 
 
-  <img src="images/lexmarkbanner.png" class="img-responsive">
-
+  <div class="row">
+    <img src="images/lexmarkbanner.png" class="img-responsive" width="100%">
+  </div>
 
 
 <div class="padding">
@@ -230,8 +231,8 @@
                       </div>
                         <div class="col">
 
-                        <p>Because there was hardly any data, I wanted to gather my own. Although specific quantitative data such as bounce rates would have been useful, I had limited time at Lexmark. With the limited time available, I decided to do a user testing and collect success rates on 10 most common tasks.</p>
-
+                        <p>Because there was hardly any data, I wanted to gather my own. Although specific quantitative data such as bounce rates would have been useful, I had limited time at Lexmark. With the limited time available, I decided to do user testing and collect success rates on 10 most common tasks.</p>
+          
                           <ol>1. After work-hours, items from people’s cubicles are disappearing. The group decides to install security cameras. Please submit a request.																									</ol>
                           <ol>2. You have lower back pain that prevents you from sitting for more than 15 minutes straight. Please submit a request for a stand-up desk.		</ol>
 
