--- a/vegout.html
+++ b/vegout.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html>
-<!DOCTYPE html>
-<html>
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144593656-1"></script>
@@ -21,8 +19,6 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <!-- Google font -->
   <link href='https://fonts.googleapis.com/css?family=Thonburi' rel='stylesheet'>
-<link href="https://fonts.googleapis.com/css?family=Chivo&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
   <!-- Fonts/Icons -->
   <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
   <link href="css/style.css" rel="stylesheet" />
@@ -58,14 +54,7 @@
 
 
 
-<div id="home">
-  <div class="landing-text">
-    <!-- <h1>BOOTSTRAP</h1> -->
-    <h3><span>Hello, stay a while & explore my work</span></h3>
-
-    <i class="fas fa-chevron-down arrowsize"></i>
-
-  </div>
+<div id="padding">
 </div>
 
 
@@ -73,7 +62,7 @@
   <div class="container"
     <div class="row">
       <div class="col">
-      <h2>Selected Projects</h2>
+      <h2>Currently in Progress... Please View my Other Works</h2>
       </div>
       <a href= "lexmark.html" class="col">
         <img src="images/lexmark.png" style="width:100%" class= "animation" alt= "Vegout">
@@ -88,21 +77,7 @@
   </div>
 </div>
 
-<div class="padding">
-  <div class="container">
-    <div class="col">
-      <h2>View More</h2>
-    </div>
-    <div class="row">
-      <a href= "comerica.html" class="col-sm-4">
-        <img src="images/comerica.png" class="img-responsive">
-      </a>
-    <a href= "vegout.html" class="col-sm-4">
-      <img src="images/vegout.png" class="img-responsive">
-    </a>
-    <a href= "michiganmed.html" class="col-sm-4">
-      <img src="images/michiganmed.png" class="img-responsive">
-    </a>
+
 
     <!-- <div id="fixed"> -->
 
