--- a/ginternchallenge.html
+++ b/ginternchallenge.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+<!DOCTYPE html>
+<html>
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144593656-1"></script>
@@ -19,6 +21,8 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <!-- Google font -->
   <link href='https://fonts.googleapis.com/css?family=Thonburi' rel='stylesheet'>
+<link href="https://fonts.googleapis.com/css?family=Chivo&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
   <!-- Fonts/Icons -->
   <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
   <link href="css/style.css" rel="stylesheet" />
