--- a/michiganmed.html
+++ b/michiganmed.html
@@ -58,14 +58,7 @@
 
 
 
-<div id="home">
-  <div class="landing-text">
-    <!-- <h1>BOOTSTRAP</h1> -->
-    <h3><span>Hello, stay a while & explore my work</span></h3>
-
-    <i class="fas fa-chevron-down arrowsize"></i>
-
-  </div>
+<div id="padding">
 </div>
 
 
@@ -73,7 +66,7 @@
   <div class="container"
     <div class="row">
       <div class="col">
-      <h2>Selected Projects</h2>
+      <h2>Currently in Progress... Please View my Other Works</h2>
       </div>
       <a href= "lexmark.html" class="col">
         <img src="images/lexmark.png" style="width:100%" class= "animation" alt= "Vegout">
@@ -88,21 +81,7 @@
   </div>
 </div>
 
-<div class="padding">
-  <div class="container">
-    <div class="col">
-      <h2>View More</h2>
-    </div>
-    <div class="row">
-      <a href= "comerica.html" class="col-sm-4">
-        <img src="images/comerica.png" class="img-responsive">
-      </a>
-    <a href= "vegout.html" class="col-sm-4">
-      <img src="images/vegout.png" class="img-responsive">
-    </a>
-    <a href= "michiganmed.html" class="col-sm-4">
-      <img src="images/michiganmed.png" class="img-responsive">
-    </a>
+
 
     <!-- <div id="fixed"> -->
 
