--- a/work.html
+++ b/work.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+<!DOCTYPE html>
+<html>
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144593656-1"></script>
@@ -19,6 +21,8 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <!-- Google font -->
   <link href='https://fonts.googleapis.com/css?family=Thonburi' rel='stylesheet'>
+<link href="https://fonts.googleapis.com/css?family=Chivo&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
   <!-- Fonts/Icons -->
   <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
   <link href="css/style.css" rel="stylesheet" />
@@ -54,7 +58,8 @@
 
 
 
-<div id="padding"></div>
+<div id="padding">
+
 
 
 <div class="padding">
@@ -82,13 +87,13 @@
       <h2>View More</h2>
     </div>
     <div class="row">
-      <a href= "cnbc.html" class="col-sm-4">
+      <a href= "comerica.html" class="col-sm-4">
         <img src="images/comerica.png" class="img-responsive">
       </a>
     <a href= "vegout.html" class="col-sm-4">
       <img src="images/vegout.png" class="img-responsive">
     </a>
-    <a href= "michiganmedicine.html" class="col-sm-4">
+    <a href= "michiganmed.html" class="col-sm-4">
       <img src="images/michiganmed.png" class="img-responsive">
     </a>
 
