--- a/lexmark.html
+++ b/lexmark.html
@@ -158,18 +158,16 @@
 <p>Between the old and new design, I saw a 36% overall increase in success rates among 10 common tasks on ServiceNow. I achieved this improvement by changing the information architecture and redesigning the request forms. Being able to support my design decisions with an understanding of employees' needs, frustrations, and existing mental models led to drastic changes.</p>
       </div>
       <div class="col">
-        <h4 class="text-center">01 Example of Improved Information Architecture</h4>
-        <hr>
-        <img src="images/overview.png" class="img-responsive">
-
+        <h4>  Example of Improved Information Architecture</h4>
       </div>
-      <br><br>
+        <img src="images/overview.png" class="img-responsive">
+      <br>
+
       <div class="col">
-        <h4 class="text-center">02 Example of Improved Form</h4>
-        <hr>
+        <h4>  Example of Improved Form Design</h4>
+      </div>
         <img src="images/formoverview.png" class="img-responsive">
 
-      </div>
 
     </div>
   </div>
@@ -232,7 +230,7 @@
                         <div class="col">
 
                         <p>Because there was hardly any data, I wanted to gather my own. Although specific quantitative data such as bounce rates would have been useful, I had limited time at Lexmark. With the limited time available, I decided to do user testing and collect success rates on 10 most common tasks.</p>
-          
+
                           <ol>1. After work-hours, items from people’s cubicles are disappearing. The group decides to install security cameras. Please submit a request.																									</ol>
                           <ol>2. You have lower back pain that prevents you from sitting for more than 15 minutes straight. Please submit a request for a stand-up desk.		</ol>
 
@@ -253,9 +251,9 @@
                             </div>
                             <br>
                       <div class="col">
-                        <h4>Here were the results of the old design</h4>
+                        <h4>Here were the results of the original design</h4>
                           <p>Baseline user testing helped me detect potential pain points, but it also allowed me to have a standard of comparison for the new design.</p>
-                        <img src="images/baselinedata.png" class="img-responsive">
+                        <img src="images/baselinedata.png" class="img-responsive" style="max-width:50%">
 
 
 
@@ -311,7 +309,7 @@
               </div>
             </div>
               <div class="col">
-                <h4>Side by side comparison of old & new flow. In the new design, the most complex form can be submitted in four clicks rather than one.</h4>
+                <h4>In the new design, the most complex form can be submitted in four clicks rather than seven.</h4>
 
                 <img src="images/firstflow.png" class="img-responsive">
               </div>
@@ -327,7 +325,7 @@
               <div class="col">
                <h4>Main Takeaways</h4><p>Forms do not always have to display all the information at first load. This got me thinking about how I can incorporate interactions that were dynamic to clean up the forms. Up until this point, I was using XD to do the mockups but decided to move to Axure for prototyping because of its capabilities for including dynamic interactions.</p><br>
                <h4>Example of dynamic interaction on form</h4>
-                <img src="images/appearonselect.png" class="img-responsive">
+                <img src="images/appearonselect.png" class="img-responsive" style="max-width:50%">
 
               </div>
             </div>
@@ -338,21 +336,27 @@
               <div class="col">
                 <h3>ServiceNow Team's Manager & Developer Approval</h3>
               </div>
-              <div class="col-sm-6">
+              <div class="col">
                 <h4>Takeaways & Roadblock</h4>
                 <li>Showing initial prototypes on Axure made it really easy for the stakeholders to see how effective my changes would be.</li>
-                <li>The developer informed me that three column design in forms was not technically possible. A technical limitation that I did not know about was brought to light!😱 </li><br>
-
-                <h4>Design Goals for Iteration #2</h4>
-                <li>Convert 3 column design(can be seen below) to 2 columns(pictured on right).</li>
-                <li>Add more possible auto-population.</li><br>
-                <h4>Previous Iteration</h4>
-                <img src="images/oldfurnituremove.png" class="img-responsive">
+                <li>The developer informed me that three column design in forms was not technically possible. A technical limitation that I did not know about was brought to light!😱 </li>
 
               </div>
-                <div class="col-sm-6">
-                  <h4>New Iteration</h4>
-                  <img src="images/furnituremove.png" class="img-responsive"><br>
+                <div class="col">
+                  <h4>Design Goals for Iteration #2</h4>
+                  <li>Convert 3 column design(can be seen below) to 2 columns(pictured on right).</li>
+                  <li>Add more possible auto-population.</li><br>
+</div>
+                  <div class="col-sm-6">
+                    <h4>Iteration #1</h4>
+            <img src="images/oldfurnituremove.png" class="img-responsive">
+
+                  </div>
+                    <div class="col-sm-6">
+                      <h4>Iteration #2</h4>
+
+                      <img src="images/furnituremove.png" class="img-responsive"><br>
+
                 </div>
               </div>
             </div>
@@ -366,10 +370,11 @@
               <div class="col">
                 <li>Final walk through of the concept</li>
                 <li>Devoted time working on strings! </li>
-                <li>The senior UX designers advised that the helper descriptions could be a list available services or items rather than full sentence descriptions.</li><br>
-                <h4>Ready for testing</h4>
-                <img src="images/lexington.png" class="img-responsive">
-
+                <li>The senior UX designers advised that the helper descriptions could be a list of available services or items rather than full sentence descriptions.</li><br>
+              <div class-"col">
+                  <h4>Ready for testing</h4>
+                <img src="images/lexington.png" class="img-responsive" style="max-width:50%">
+<div>
               </div>
             </div>
           </div>
@@ -384,7 +389,7 @@
                 </div>
                 <div class="col">
                   <h4>User testing of new design showed a 36% improvement!</h4>
-                  <img src="images/newdata.png" class="img-responsive"><br>
+                  <img src="images/newdata.png" class="img-responsive" style="max-width:50%"><br>
 
                   <h4>Concern</h4>
                   <p>Goal #9 had a lower success rate this time around when compared to the old design. People who failed the task stated that the wrongfully submitted form never indicated to them that they were in the wrong location. I made sure to incorporate that feedback in the last round of revisions before developer hand-off.</p>
