--- a/comerica.html
+++ b/comerica.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html>
-<!DOCTYPE html>
-<html>
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144593656-1"></script>
@@ -48,7 +46,6 @@
   <li><a class="active" href="work.html">WORK</a></li>
   <li><a class="about" href="about.html">ABOUT</a></li>
   <li><a class="about" target="_blank" href="https://kminjin.github.io/documents/michellekim.pdf">RESUME</a></li>
-
 </ul>
 </div>
 
@@ -56,38 +53,183 @@
 
 </nav>
 
+<div id="padding"></div>
 
 
-<div id="padding">
-</div>
-
-
+<br>
 <div class="padding">
-  <div class="container"
+  <div class="container">
     <div class="row">
-      <div class="col">
-      <h2>Currently in Progress... Please View my Other Works</h2>
-      </div>
-      <a href= "lexmark.html" class="col">
-        <img src="images/lexmark.png" style="width:100%" class= "animation" alt= "Vegout">
-      </a>
-      <a href= "cnbc.html" class="col">
-        <img src="images/cnbc.png" style="width:100%" class= "animation" alt= "Vegout">
-      </a>
-      <a href= "ginternchallenge.html" class="col">
-        <img src="images/google.png" style="width:100%" class= "animation" alt= "Vegout">
-      </a>
+      <img src="images/comericabanner.png" class="img-responsive">
   </div>
-  </div>
-</div>
-
-
-
-    <!-- <div id="fixed"> -->
-
-    <div class="padding">
-      <div class="container">
+    <div class="row">
+      <h2>Overview</h2>
     </div>
+      <div class="row">
+        <div class="col-sm-4">
+          <h4>Team: UX Researchers at InfoLab </h4>
+            <p>Michelle Kim<br>
+              Julia Dinoto<br>
+              Nicholas Tzannes<br>
+              Soomin Kim<br>
+              Joshua Cutter</p>
+        </div>
+        <div class="col-sm-4">
+          <h4>Client</h4>
+            <p>Innovation team at Comerica Bank
+</p>
+        </div>
+        <div class="col-sm-4">
+          <h4>Duration</h4>
+            <p>Jan 2019 - April 2019, 3 months </p>
+        </div>
+    </div>
+  </div>
+
+
+  <div class="padding">
+    <div class="container">
+      <div class="col">
+        <h3>Why did Comerica Bank need us?</h3>
+      </div>
+      <div class="col">
+        <p>The clients were dissatisfied with the communication tool they were using to broadcast their news and achievements to the rest of the organization. The clients believed their current communication tool was responsible for the observed low engagement, including low email responses and attendance in all-employee meetings.</div>
+      <div class="col">
+        <h3>We aimed to...</h3>
+        <li>Examine how users interacted with the current tool.
+        <li>Understand users' needs.
+        <li>Collect feedback on perception of the Innovation Team from target users.
+      </div><br>
+<div class="col">
+    <h3>UX Skills Practiced</h3>
+          <li>User Interviews</li>
+          <li>Stakeholder interviews</li>
+          <li>Affinity Analysis</li>
+          <li>Survey Design and Analysis</li>
+
+        </div>
+
+        <div class="col">
+            <h3>Constraints</h3>
+                  <li>Restricted access to company resources & tools </li>
+                  <li>Restricted access to target audience</li>
+
+                </div>
+      </div>
+    </div>
+
+
+  <div class="padding">
+    <div class="container">
+
+      <div class="col">
+        <h3>Main Takeaways</h3>
+      </div>
+      <div class="col">
+<li>There are challenges that come with dealing with large corporation infrastructure
+At school, instructors are supportive and take steps to facilitate the UX research process but UX was not actively and widely championed for in the client company and the culture impeded some efforts.
+<li>Numbers and statistics are data that everyone can understand because they help people tangibly measure the improvements. If the baseline data is not readily available, it might be worth the effort to gather baseline data before diving into problem solving.
+
+      </div>
+
+      <div class="col">
+        <h3>What I would have done differently</h3>
+      </div>
+      <div class="col">
+<li>Gather baseline data.
+<li>Consider limitations and stay away from surveys. I maybe should have participated in observation.
+
+      </div>
+
+    </div>
+  </div>
+  </div>
+
+
+
+  <div class="padding">
+    <div class="container">
+      <div class="row">
+        <h2>Understand</h2>
+      </div>
+          <div class="col">
+            <h4>Background Research</h4>
+          </div>
+            <div class="col">
+              <p>Looked into their current tools and did a competitive analysis chart on which products overlapped in which features
+              <li>Out of the 8 internal communication tools, 3 tools did not provide different features.</li></p>
+              <p>Stakeholder Interviews (2)
+              <li>“The expectation going in, and something that might be hard to grasp is that our culture is one where things move at a glacial pace.  This permeates through the entire organization and emails go unanswered, projects take far longer than they should” </li></p>
+              <br>
+            </div>
+            <div class="col">
+              <h4>User Needs Assessment</h4>
+              <p>Interviews (2 from Innovation team, 3 outside of Innovation team)<br>
+                Primarily wanted to understand which products people used, which products people did not, and what were their frustration
+              <li>People felt overwhelmed
+                <li>Would receive the same context in multiple application channels and tended to think they already read it somewhere else and delete or not pay attention to them
+<li>“People who are so focused on transformation can’t see the value of innovation and see it as extra work”
+<li>Does not remember the last time innovation tried to contact them digitally, only through physical conversations</p>
+  <br>
+  <p>Survey<br>
+    In hindsight, it was silly to send the survey out when we were trying to figure out a communication problem...
+  <li>Received 3 responses, inconclusive results!
+    <li>People who responded were close to the Innovation team and therefore were biased </p>
+
+            </div>
+          </div>
+        </div>
+
+
+
+          <div class="padding">
+            <div class="container">
+              <div class="col">
+                <h3>Conclusions</h3>
+              </div>
+              <div class="col">
+    <p>Having too many communication tools with overlapping featured led to fragmented and inconsistent outcomes.
+<li>Not many people remember receiving Innovation Team communications.
+<li>There are problems with consistency in communication.
+  <li>The large number of communication channels can be harmful.
+      <li>People are not engaged with non-essential content.
+
+</p>
+
+              </div>
+            </div>
+          </div>
+
+
+            <div class="padding">
+              <div class="container">
+                  <div class="col">
+                    <h3>Solutions</h3>
+</div>
+<div class="row">
+  <div class="col-sm-6">
+                  <li>  Recommended tools that had overlapping features
+<li>Redesigned their connect page
+
+<li>Created a style guide and new logo to better increase their brand identity
+    <!-- <img src="images/comericalogo.png" class="img-responsive" style="max-width:50%"> -->
+<li>Created a new email template
+</div>
+  <div class="col-sm-6">
+  <img src="images/innovationcenter.png" class="img-responsive" style="max-width:50%">
+</div>
+</div>
+</div>
+  <!-- <img src="images/comericaemail.png" class="img-responsive" style="max-width:50%"> -->
+
+
+
+
+                  </div>
+              </div>
+            </div>
+
+
     <footer class="container-fluid text-center">
       <div class="row">
       <!-- <h3>Contact Us</h3>
@@ -95,14 +237,12 @@
       <h4>7185031160</h4>
     </div>
   <div class="col-sm-4"> -->
-    <a href="https://www.linkedin.com/in/mkimdesign/" target="_blank" class="fab fa-linkedin"></a>
-    <a href="https://www.instagram.com/m.zinny/" target="_blank" class="fab fa-instagram"></a>
-  </div>
-      <div class="row">
-        <p>&copy; 2019 Michelle Kim<p>
-  <!-- <div class="col-sm-4">
-    <img src="images/b.png" class="icon">
-  </div> -->
+      <a href="https://www.linkedin.com/in/mkimdesign/" target="_blank" class="fab fa-linkedin"></a>
+      <a href="https://www.instagram.com/m.zinny/" target="_blank" class="fab fa-instagram"></a>
+    </div>
+    <div class="row">
+      <p>&copy; 2019 Michelle Kim<p>
+
     </div>
   </footer>
 
