--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
       <a href= "comerica.html" class="col-sm-4">
         <img src="images/comerica.png" class="img-responsive">
       </a>
-    <a href= "vegout.html" class="col-sm-4">
+    <!-- <a href= "vegout.html" class="col-sm-4">
       <img src="images/vegout.png" class="img-responsive">
-    </a>
+    </a> -->
     <a href= "michiganmed.html" class="col-sm-4">
       <img src="images/michiganmed.png" class="img-responsive">
     </a>
