--- a/comerica.html
+++ b/comerica.html
@@ -203,24 +203,26 @@ At school, instructors are supportive and take steps to facilitate the UX resear
 
             <div class="padding">
               <div class="container">
+
                   <div class="col">
                     <h3>Solutions</h3>
 </div>
-<div class="row">
-  <div class="col-sm-6">
-                  <li>  Recommended tools that had overlapping features
-<li>Redesigned their connect page
+<!-- <div class="row"> -->
+  <div class="col">
+  <p>Because of an agreement, we cannot showcase all our solutions but here is a mockup with dummy information.
+                  <li>  Recommended tools that had overlapping features to get rid of the number of tools being used.
+<li>Redesigned their connect page based on user needs.
 
-<li>Created a style guide and new logo to better increase their brand identity
+<li>Created a style guide and new logo to better increase their brand identity.
     <!-- <img src="images/comericalogo.png" class="img-responsive" style="max-width:50%"> -->
-<li>Created a new email template
+<li>Created a new email template to keep communication consistent.</p>
 </div>
-  <div class="col-sm-6">
+  <div class="col">
   <img src="images/innovationcenter.png" class="img-responsive" style="max-width:50%">
 </div>
 </div>
 </div>
-  <!-- <img src="images/comericaemail.png" class="img-responsive" style="max-width:50%"> -->
+  <!-- <img src="images/comericaemail.png" class="img-responsive" style="max-width:50%"> --><div class="row"
 
 
 
