--- a/lexmark.html
+++ b/lexmark.html
@@ -199,8 +199,8 @@
             <div class="col">
               <h4>03 ServiceNow Request Handler</h4>
               <li>A rundown on what information was absolutely necessary on the request forms.</li>
-              <li>A brief how ServiceNow actually works.</li>
-              <li>Gather existing data.</li>
+              <li>A brief demo on how ServiceNow actually works.</li>
+              <li>Ask for any existing data.</li>
               <br>
             </div>
           </div>
