--- a/lexmark.html
+++ b/lexmark.html
@@ -414,6 +414,10 @@
                   <li>When users are involved in the design process either throug testing or other research methods, results are better.</li>
                   <li> Always iterate!</li>
 
+                  <button type="button" class="about" target="_blank" href="https://kminjin.github.io/documents/lexmarkdeck.pdf">PDF Version</button>
+
+                  <a class="about" target="_blank" href="https://kminjin.github.io/documents/lexmarkdeck.pdf">PDF Version</a></li>
+
                   </div>
               </div>
             </div>
