--- a/lexmark.html
+++ b/lexmark.html
@@ -63,6 +63,9 @@
 
 <div class="padding">
   <div class="container">
+<div class="row">
+    <a class="about" target="_blank" href="https://kminjin.github.io/documents/lexmarkdeck.pdf">PDF Version</a></li>
+</div>
     <div class="row">
       <h2>Overview</h2>
     </div>
@@ -85,6 +88,7 @@
 
   <div class="padding">
     <div class="container">
+
       <div class="col">
         <h3>What did I work on?</h3>
       </div>
@@ -414,9 +418,7 @@
                   <li>When users are involved in the design process either throug testing or other research methods, results are better.</li>
                   <li> Always iterate!</li>
 
-                  <button type="button" class="about" target="_blank" href="https://kminjin.github.io/documents/lexmarkdeck.pdf">PDF Version</button>
 
-                  <a class="about" target="_blank" href="https://kminjin.github.io/documents/lexmarkdeck.pdf">PDF Version</a></li>
 
                   </div>
               </div>
