--- a/comerica.html
+++ b/comerica.html
@@ -3,12 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<!-- SITE TITLE -->
-	<title>Blaster Responsive Template</title>
-<!--
-
-Blaster Template
-
-http://www.templatemo.com/tm-472-blaster
+	<title>Comerica</title>
 
 -->
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
