--- a/doghouse.html
+++ b/doghouse.html
@@ -3,11 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<!-- SITE TITLE -->
-	<title>Blaster Responsive Template</title>
-<!--
-Blaster Template
-http://www.templatemo.com/tm-472-blaster
--->
+	<title>Dog House</title>
+
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="keywords" content="">
@@ -254,37 +251,8 @@ http://www.templatemo.com/tm-472-blaster
 	</div>
 </section>
 
-<!-- footer section -->
-<footer>
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12 col-sm-12">
-				<ul class="social-icon">
-					<li><a href="http://www.facebook.com/templatemo"
-                    				class="fa fa-facebook wow bounceIn" data-wow-delay="0.3s" target="_parent"></a></li>
-					<li><a href="#" class="fa fa-twitter wow bounceIn" data-wow-delay="0.6s"></a></li>
-					<li><a href="#" class="fa fa-behance wow bounceIn" data-wow-delay="0.9s"></a></li>
-					<li><a href="#" class="fa fa-dribbble wow bounceIn" data-wow-delay="0.9s"></a></li>
-					<li><a href="#" class="fa fa-github wow bounceIn" data-wow-delay="0.9s"></a></li>
-				</ul>
-			</div>
-		</div>
-	</div>
-</footer>
 
-<!-- copyright section -->
-<section id="copyright">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-8 col-sm-8 col-xs-9">
-				<p>Copyright © 2084 Blaster Studio | Design: <a rel="nofollow" href="http://www.templatemo.com" target="_parent">templatemo</a></p>
-			</div>
-			<div class="col-md-4 col-sm-4 col-xs-3">
-				<a href="#home" class="smoothScroll fa fa-angle-up"></a>
-			</div>
-		</div>
-	</div>
-</section>
+
 
 <!-- JAVASCRIPT JS FILES -->
 <script src="js/jquery.js"></script>
