--- a/vegout.html
+++ b/vegout.html
@@ -3,14 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<!-- SITE TITLE -->
-	<title>Blaster Responsive Template</title>
-<!--
+	<title>Veg Out</title>
 
-Blaster Template
-
-http://www.templatemo.com/tm-472-blaster
-
--->
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="keywords" content="">
