--- a/cnbc.html
+++ b/cnbc.html
@@ -54,421 +54,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 col-sm-12 text-center">
-					<h1 class="heading bold">Veg Out</h1>
-					<h2 class="subheading">A mobile app that helps people eat less meat, October - Nov 2019</h2>
-				</div>
-				<p> Veg Out was a personal passion product design project that I took on because our planet is deteriorating and I wanted to do something about it.
-        Veg Out is meant to be a one-stop resource for anyone who wants to go meat-free.</p>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<hr>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-<h3>My work was important because </h3>
-<p> 01 The animal agriculture industry produces roughly 18% of all produced greenhouse gas emissions (FAOUN, 2006).<br>
-  02 This industry also utilizes an unsustainable amount of resources. 80-90% of US water consumption is utilized by the animal agriculture industries (USDA, 2016).<br>
-  03 If everyone reduces their meat consumption, our earth will be healthier! </p>
-<img src="images/globalwarming.png" alt= "ServiceNow Team" class= "center" style="max-width:30%">
-<br>
-<br>
-<br>
-<br>
-<br>
-<hr>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-
-
-			</div>
-			<div class="row">
-				<div class="col">
-					<h3>Solution at Glance</h3>
-					<br>
-					<br>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-3 col-md-3 col-sm-2 wow fadeInUp text-center" data-wow-delay="0.6s">
-					<img src="images/day0.png" style="max-width:100%" alt="manager">
-					<h4>Progress Visualization</h4>
-					<p>People can log a meat-free day and see a visualization of their impact on the world for that week.</p>
-				</div>
-        <div class="col-lg-3 col-md-3 col-sm-2 wow fadeInUp text-center" data-wow-delay="0.6s">
-					<img src="images/leaderboard.png" style="max-width:100%" alt="manager">
-					<h4>Communities</h4>
-					<p>People can join communities and see their ranking compared to others and feel more motivated.</p>
-				</div>
-				<div class="col-lg-3 col-md-3 col-sm-2 wow fadeInUp text-center" data-wow-delay="0.9s">
-				 	<img src="images/recipe.png" style="max-width:100%" alt= "Administrative Assistant">
-					<h4>Tools for Success</h4>
-					<p>By providing vegan recipes, Veg Out can become a one stop resource for anyone who wants to go meat-free.</p>
-				</div>
-				<div class="col-lg-3 col-md-3 col-sm-2 wow fadeInUp text-center" data-wow-delay="1s">
-				<img src="images/education.png" style="max-width:100%" alt= "ServiceNow Team">
-					<h4>Knowledge</h4>
-					<p>On a weekly basis, the education section is updated with a new informational video and article encouraging an increased meat-free diet.</p>
-
-				</div>
-			</div>
-		</div>
-</section>
-<hr>
-
-
-<!-- about section -->
-<section id="about">
-	<div class="container">
-		<div class= "row">
-			<div class="col">
-				<h3>Design Process</h3><br><br>
-			</div>
-		</div>
-	<div class= "row">
-			<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.6s">
-					<h4>Understand</h4>
-					<li>Meet with ServiceNow Team Manager</li>
-          <li>Meet with Developer</li>
-          <li>Meet with ServiceNow Team Member</li>
-          <li>Gather Existing Data</li>
-          <li>Baseline User Testing/Interview</li>
-          <li>Analyze Pain Points</li>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.9s">
-					<h4>Explore</h4>
-					<li>Card Sorting</li>
-          <li>Develop Design Concept</li>
-          <li>Design Review & Revise Concept#1</li>
-          <li>Meet with ServiceNow Manager & Developer</li>
-          <li>Design Review & Revise Concept #2</li>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="1s">
-					<h4>Materialize</h4>
-					<li>Prototype</li>
-		      <li>New Design User Testing/Interview</li>
-		      <li>Revise Prototype</li>
-		      <li>Documentation for Developer Hand-Off</li>
-			</div>
-		</div>
-	</div>
-</section>
-<br>
-<hr>
-
-
-<!-- team section -->
-	<section>
-		<div class="container">
-			<div class="row">
-				<div class="col">
-					<br><br><br>
-        	<h3>Solutions at Glance</h3>
-      	</div>
-			</div>
-			<div class="row">
-      	<div class="col">
-					<p>Between the old and new design, I saw a 36% overall increase in success rates among 10 common tasks on ServiceNow. I achieved this improvement by changing the information architecture and redesigning the request forms. Being able to support my design decisions with an understanding of employees' needs, frustrations, and existing mental models led to drastic changes.</p><br><br>
-      	</div>
-			</div>
-			<div class="row">
-      	<div class="col">
-        	<h4>  Example of Improved Information Architecture</h4>
-      		<br>
-				</div>
-        <img src="images/overview.png" class="img-responsive">
-      	<br><br><br>
-			</div>
-			<div class="row">
-      	<div class="col">
-        	<h4>  Example of Improved Form Design</h4>
-					<br>
-      	</div>
-        <img src="images/formoverview.png" class="img-responsive">
-    		</div>
-				<br>
-				<br>
-				<br>
-				<br>
-			</div>
-  	</div>
-		<hr>
-	</section>
-
-	<section id="about">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12 col-sm-12 text-center">
-					<h1 class="heading bold">Phase 1: Understand</h1>
-	     </div>
-		 </div>
-		 <div>
-	</section>
-
-	<section>
-			<div class="container">
-			<div class="row">
-				<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.6s">
-					<h3>Meetings with Stakeholders</h3>
-				  <h4>01 ServiceNow Team Manager</h4>
-				  <li>"Time is the most precious resource people have."</li>
-				  <li>"ServiceNow was created under significant time constraints and we did not have time for user research."</li>
-				  <br>
-				  <h4>02 Developer</h4>
-				  <li>"ServiceNow can't update forms with each keystroke."</li>
-				  <li>"Information that can be auto-populated are info that can be pulled from PeopleSoft."</li>
-				  <li>"Besides that, ServiceNow is pretty flexible and I can't think of any technical limitations."... <em>this claim will not be supported later on </em>😅</li>
-				  <br>
-					<h4>03 ServiceNow Request Handler</h4>
-				  <li>A rundown on what information was absolutely necessary on the request forms.</li>
-				  <li>A brief demo on how ServiceNow actually works.</li>
-				  <li>Ask for any existing data.</li>
-				  <br>
-					<br>
-					<br>
-					<br>
-						<hr>
-				</div>
-			</div>
-		</div>
-	</section>
-
-	<section>
-		<div class="container">
-			<div class="row">
-					<div class="col">
-						<br><br><br>
-						<h3>Roadblock!</h3>
-					</div>
-											 <p>I was interested in learning about the request forms' conversion rates, bounce rates, frequency of different requests, etc but they were not available. The only collected data were the following:<br>
-	                    <li>4177 service requests in the past 12 months</li>
-	                    <li>Majority of requests "seemed" to be maintenance requests</li></p>
-				               <br><br><br><hr>
-
-	    </div>
-	  </div>
-	</section>
-
-	<section>
-		<div class="container">
-			<div class="row">
-					<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.6s">
-						<h3>User Testing</h3>
-						<p>Because there was hardly any data, I wanted to gather my own. Although specific quantitative data such as bounce rates would have been useful, I had limited time at Lexmark. With the limited time available, I decided to do user testing and collect success rates on 10 most common tasks.</p>
-								<ol>1. After work-hours, items from people’s cubicles are disappearing. The group decides to install security cameras. Please submit a request.																									</ol>
-								<ol>2. You have lower back pain that prevents you from sitting for more than 15 minutes straight. Please submit a request for a stand-up desk.		</ol>
-								<ol>3. You are a manager who wants to break the wall between two small meeting rooms and make it into one medium sized meeting room. Please submit a request.		</ol>
-								<ol>4. A projector is broken. Please submit a request.			</ol>
-								<ol>5. You need to ship a 1000 lb. equipment to China. Please submit a request.				</ol>
-								<ol>6. You recently got injured and will need to use a wheelchair for several months. The entry to your office does not have an automotive door, please submit a request.					</ol>
-								<ol>7. In your office, there is a 15ft x 5ft sized whiteboard hung up. It needs to be relocated into a different room. Please submit a request.																									</ol>
-								<ol>8. You want to move a couch out of your office. Please submit a request.																									</ol>
-								<ol>9. A cabinet has been in your office for the last ten years. You want to get it opened, but it is locked. Please submit a request																									</ol>
-								<ol>10. You have highly sensitive documents and you need a padlock for your door. Please submit a request.		</ol><br>
-								 <img src="images/baselinedata.png" class="img-responsive center" style="max-width:90%">
-								<br><br>
-
-			</div>
-		</div>
-<br><br><br>
-		<hr>
-	</section>
-
-
-	<section id="about">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12 col-sm-12 text-center">
-					<h1 class="heading bold">Phase 2: Explore</h1>
-		      </div>
-				</div>
-			</div>
-		</section>
-
-		<section>
-			<div class="container">
-				<div class="row">
-					<div classs= "col">
-					<h3>Developing First Design Concept</h3>
-				</div>
-					<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.6s">
-						<h4>Example pain points in old design & design decisions to address them</h4>
-		<p>01</p>
-	<div class="row">
-		<div class="col-sm-6">
-			<p>Old Design<br>When requesting a security camera,"Site Operations Security Request" seems like a great option (Left Image #2, first View Details box), until you click on the form and realize it's only for location in Zhuhai, China.</p>
-		</div>
-		<div class="col-sm-6">
-			<p>New Design<br>Came up with a design that prioritizes location(Right Image #1) first to cut out any unnecessary searching behaviors.</p>
-		</div>
-	</div>
-	<br>
-		<p>02</p>
-	<div class="row">
-		<div class="col-sm-6">
-			<p>Old Design<br>For an ergonomic furniture request, there is a list of options to select however, not everyone knows what each option means and options that are either/or are checkboxes which allow for multiple selections. </p>
-		</div>
-		<div class="col-sm-6">
-			<p>New Design<br>Make the information digestible, offer categories, use radio buttons rather than checkboxes, and offer help where needed with help icons.</p>
-		</div>
-	</div>
-	<br>
-		<p>03</p>
-	<div class="row">
-		<div class="col-sm-6">
-			<p>Old Design<br>For the overall request selection process, the titles for each request were not clear or sometimes not representative of the request forms. For example, "Badge Reader-Security Lexington" request had more options besides a badge reader, but an employee would not know that from the current design.</p>
-		</div>
-		<div class="col-sm-6">
-			<p>New Design<br>Came up with a design that had helper text(right image #3) for each request form</p>
-		</div>
-
-	</div>
-		<div class="col">
-			<h4><br><br><br>In the new design, the most complex form can be submitted in four clicks rather than seven.</h4>
-
-			<img src="images/firstflow.png" class="img-responsive">		<br>
-<br><br><br><hr>
-		</div>
-		</div>
-		</div>
-	</section>
-
-
-	<div class="container">
-		<br><br><br>
-<div class= "row">
-
-					<h3>Design Review & Revisions #1</h3>
-				</div>
-				<div class= "row">
-					<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.6s">
-					<h4>Main Takeaways</h4><p>Forms do not always have to display all the information at first load. This got me thinking about how I can incorporate interactions that were dynamic to clean up the forms. Up until this point, I was using XD to do the mockups but decided to move to Axure for prototyping because of its capabilities for including dynamic interactions.</p><br>
-               <h4>Example of dynamic interaction on form</h4>
-                <img src="images/appearonselect.png" class="img-responsive" style="max-width:80%"><br><br><br>
-							</div>
-						</div>
-<hr>
-          </div>
-
-					<div class="container">
-						<div class="row">
-							<div class="col">
-
-									<h3>ServiceNow Team's Manager & Developer Approval</h3>
-								</div>
-							<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.6s">
-								<br>
-
-							 <h4>Takeaways & Roadblock</h4>
-							 <li>Showing initial prototypes on Axure made it really easy for the stakeholders to see how effective my changes would be.</li>
-							 <li>The developer informed me that three column design in forms was not technically possible. A technical limitation that I did not know about was brought to light!😱 </li><br>
-							 <div class="col">
-								 <h4>Design Goals for Iteration #2</h4>
-								 <li>Convert 3 column design(can be seen below) to 2 columns(pictured on right).</li>
-								 <li>Add more possible auto-population.</li><br><br>
-</div>
-								 <div class="col-sm-6">
-									 <h4>Iteration #1</h4>
-					 <img src="images/oldfurnituremove.png" class="img-responsive">
-
-								 </div>
-									 <div class="col-sm-6">
-										 <h4>Iteration #2</h4>
-
-										 <img src="images/furnituremove.png" class="img-responsive"><br><br><br>
-				              </div>
-				            </div>
-				          </div>
-									<hr>
-
-
-									<div class="padding">
-								             <div class="container">
-								               <div class="col">
-																 <br><br><br>
-								                 <h3>Design review & Revisions #2</h3>
-								               </div>
-								             	<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.6s">
-								                 <li>Final walk through of the concept</li>
-								                 <li>Devoted time working on strings! </li>
-								                 <li>The senior UX designers advised that the helper descriptions could be a list of available services or items rather than full sentence descriptions.</li><br>
-								                   <h4>Ready for testing</h4>
-								                 <img src="images/lexington.png" class="img-responsive" style="max-width:50%"><br><br><hr>
-								               </div>
-								             </div>
-													 </div>
-								           </div>
-
-													 <section id="about">
-													 	<div class="container">
-													 		<div class="row">
-													 			<div class="col-md-12 col-sm-12 text-center">
-													 				<h1 class="heading bold">Materialize</h1>
-																	</div>
-
-																</div>
-															</div>
-														</section>
-														<section>
-														 <div class="container">
-															 <div class="row">
-								                 <div class="col">
-								                   <h3>Data Collection for New Design</h3>
-								                 </div>
-								                 <div class="col">
-								                   <h4>User testing of new design showed a 36% improvement!</h4>
-								                   <img src="images/newdata.png" class="img-responsive" style="max-width:50%"><br>
-
-								                   <h4>Concern</h4>
-								                   <p>Goal #9 had a lower success rate this time around when compared to the old design. People who failed the task stated that the wrongfully submitted form never indicated to them that they were in the wrong location. I made sure to incorporate that feedback in the last round of revisions before developer hand-off.</p><br><br><hr>
-
-								                 </div>
-								               </div>
-								             </div>
-													 </section>
-<section>
-								             <div class="padding">
-								               <div class="container">
-								                   <div class="col">
-								                     <h3><br><br>Takeaways</h3>
-								                   </div>
-								                   <div class="col">
-
-								                   <li>When designing a product,experience should come first. Otherwise, be prepared for more time and cost being spent on the project down the road.</li>
-								                   <li>To help users understand where they are and locate what they are searching for, be contextual,transparent, and approachable.</li>
-								                   <li>Always keep in mind that you are
-								                   designing for people. People prefer simplicity and clarity. Sometimes something simple as a list rather than a description can be clearer.</li>
-								                   <li>Always keep in mind that you are designing for people. People prefer simplicity and clarity.</li>
-								                   <li>Communicate frequently with developers about the specifics.</li>
-								                   <li>When users are involved in the design process either throug testing or other research methods, results are better.</li>
-								                   <li> Always iterate!</li>
-
-
-
-								                   </div>
-								               </div>
-								             </div>
-													 </section>
-
-													 <footer>
- 														<div class="container">
- 															<div class="row">
- 																<div class="col-md-12 col-sm-12">
- 																	<ul class="social-icon">
- 																		<li><a target="_blank" href="https://www.linkedin.com/in/mkimdesign/" class="fa fa-linkedin wow bounceIn" data-wow-delay="0.9s"></a></li>
- 																		<li><a target="_blank" href="https://github.com/kminjin" class="fa fa-github wow bounceIn" data-wow-delay="0.9s"></a></li>
- 																	</ul>
- 																</div>
- 															</div>
- 														</div>
- 													</footer>
+					<h1 class="heading bold">In Progress</h1>
+				
 
 <!-- JAVASCRIPT JS FILES -->
 <script src="js/jquery.js"></script>
