--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
 
 <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
 
+<!--
+	<section id="home">
+		<div class="container">
+			<div class="row">
+			</div>
+		</div>
+	</section> -->
+
 
 <!-- navigation section -->
 <section class="navbar navbar-fixed-top custom-navbar" role="navigation">
@@ -68,7 +76,7 @@
 		<div class="row">
 			<div class="col-md-12 col-sm-12">
 				<h1 class="selected-work-text">MICHELLE KIM</h1>
-				<h2 class="subheading selected-work">UX Designer</h2>
+				<h2 class="subheading selected-work">UX Designer, Graduating from University of Michigan in May 2020</h2>
 				<!-- ISO section -->
 				<div class="iso-section">
 					<ul class="filter-wrapper clearfix">
