--- a/vegout.html
+++ b/vegout.html
@@ -34,8 +34,8 @@
 			</div>
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="work.html" class="smoothScroll">WORK</a></li>
-					<li><a href="about.html" class="smoothScroll">ABOUT</a></li>
+					<li><a href="index.html#work" class="smoothScroll">WORK</a></li>
+					<li><a href="index.html#about" class="smoothScroll">ABOUT</a></li>
 					<li><a target="_blank" href="https://kminjin.github.io/documents/michellekim.pdf">RESUME</a></li>
 				</ul>
 			</div>
