--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 
 <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
 
-<!--
+
 	<section id="home">
 		<div class="container">
 			<div class="row">
 			</div>
 		</div>
-	</section> -->
+	</section>
 
 
 <!-- navigation section -->
